Bug #33659 - upward action-list if there is more space above than below the selected row

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -1576,6 +1576,11 @@ i.file {
         div.ui.dropdown {
           height: 19px;
 
+          &[data-upward] > .menu {
+            top: auto !important;
+            bottom: 100% !important;
+          }
+
           svg {
             width: 20px;
             height: 19px;
