--- a/styles/base.scss
+++ b/styles/base.scss
@@ -3,6 +3,13 @@
 
 $grey: #979797 !important;
 
+@media only screen and (max-width: 767px) {
+  .ui.container {
+    margin-left: 0em !important;
+    margin-right: 0em !important;
+  }
+}
+
 body {
   background: #fff;
   font-family: 'HelveticaNeueLTPro';
