Task #34837 - Recolored Table header to black including icons for My Inventory/Marketplace + page header icons (MiniCart, Holds)

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -1726,8 +1726,8 @@ i.file {
           padding: 10px;
           text-align: left;
           font-size: 14px;
-          font-weight: 700;
-          color: #848893;
+          font-weight: 500;
+          color: #20273a;
           line-height: 19px;
 
           .inventory-wrapper &,
