Task #35082 - fix for group cell overflow (Marketplace) + fix for background color over the whole row (should be applied only on table cells)

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -2063,7 +2063,7 @@ i.file {
       }
 
       tr.non-conforming {
-        background-color: #fff0ed;
+        /*background-color: #fff0ed;*/
 
         > td {
           background-color: #fff0ed;
