--- a/styles/base.scss
+++ b/styles/base.scss
@@ -2096,3 +2096,387 @@ i.file {
 .visible.menu.transition {
   z-index: 600 !important;
 }
+
+/* -------------------------------------------------------
+    NEW INVENTORY/MARKETPLACE DESIGN
+   ------------------------------------------------------- */
+
+.inventory-wrapper,
+.marketplace-wrapper {
+
+  .table-responsive {
+
+    table.table {
+      border-spacing: 0;
+      border-collapse: separate;
+
+      thead {
+
+        tr {
+
+          th {
+            height: 20px;
+            border: 0 none;
+            padding: 0 10px !important;
+            background: #f8f9fb none;
+            box-shadow: 0 0 0 0 transparent !important;
+            text-transform: uppercase;
+            font-size: 12px;
+            font-weight: 700;
+            color: #848893;
+
+            &:after {
+              content: none !important;
+              display: none !important;
+            }
+
+            &:nth-child(2) {
+              padding-left: 0 !important;
+            }
+
+            &:nth-last-child(2) {
+              border: 0 none !important;
+            }
+          }
+        }
+      }
+
+      tbody {
+
+        tr {
+
+          td {
+            position: relative;
+            overflow: visible;
+            height: 20px;
+            padding: 9px 10px !important;
+            box-shadow: 0 6px 0 0 #f8f9fb;
+            font-size: 14px;
+            font-weight: 400;
+            color: #20273a;
+            line-height: 20px;
+
+            .cell-wrapper {
+              overflow: hidden;
+              display: block;
+              width: 100%;
+              text-overflow: ellipsis;
+            }
+
+            &:not(.p-0):before {
+              content: "";
+              position: absolute;
+              top: 100%;
+              left: 0;
+              right: 0;
+              display: block;
+              height: 6px;
+              margin-top: 1px;
+              background: #f8f9fb;
+              box-shadow: 0 0 0 0 transparent;
+            }
+
+            &:nth-child(2) {
+              position: relative;
+              border-bottom-left-radius: 3px;
+              padding-left: 20px !important;
+
+              &:after {
+                content: "";
+                position: absolute;
+                left: -1px;
+                bottom: 100%;
+                display: block;
+                width: 3px;
+                height: 3px;
+                border-width: 0 0 1px 1px;
+                border-style: solid;
+                border-color: #dde2e6;
+                background: #fff;
+              }
+            }
+
+            &:nth-last-child(2) {
+              position: relative;
+              border-bottom-right-radius: 3px;
+              padding-right: 20px !important;
+
+              &:after {
+                content: "";
+                position: absolute;
+                right: -1px;
+                bottom: 100%;
+                display: block;
+                width: 3px;
+                height: 3px;
+                border-width: 0 1px 1px 0;
+                border-style: solid;
+                border-color: #dde2e6;
+                background: #fff;
+              }
+            }
+
+            span[class*="table-header-title"] {
+              display: inline-block;
+              width: calc(100% - 18px);
+              vertical-align: top;
+            }
+          }
+
+          &.group-row {
+
+            td {
+              position: relative;
+              height: 30px;
+              padding: 15px 10px 9px !important;
+              background: #fff;
+              box-shadow: 0 0 0 0 transparent;
+              vertical-align: middle;
+              font-size: 14px;
+              font-weight: 400;
+              color: #20273a;
+              line-height: 30px;
+
+              &:not(.p-0):after {
+                content: "";
+                position: absolute;
+                top: 6px;
+                left: 0;
+                right: 0;
+                display: block;
+                width: auto;
+                height: 9px;
+                border-width: 1px 0 0;
+                border-style: solid;
+                border-color: #dde2e6;
+                box-shadow: 0 -5px 0 0 #f8f9fb;
+              }
+
+              &:nth-child(2) {
+                padding-left: 20px !important;
+
+                &:after {
+                  left: -1px;
+                  border-width: 1px 0 0 1px;
+                  border-top-left-radius: 3px;
+                  box-shadow: 0 -5px 0 0 #f8f9fb, -5px -3px 0 3px #f8f9fb;
+                }
+              }
+
+              &:nth-last-child(2) {
+                padding-right: 10px !important;
+
+                &:after {
+                  right: -1px;
+                  border-width: 1px 1px 0 0;
+                  border-top-right-radius: 3px;
+                  box-shadow: 0 -5px 0 0 #f8f9fb, 5px -3px 0 3px #f8f9fb;
+                }
+              }
+
+              div.group-right svg {
+                color: #848893;
+              }
+            }
+
+            &:hover {
+
+              td {
+                background: #eff9ff;
+
+                &:after {
+                  background: #eff9ff;
+                }
+              }
+
+              + tr:not(.group-row) {
+
+                td:nth-child(2):after,
+                td:nth-last-child(2):after {
+                  background: #eff9ff;
+                }
+              }
+            }
+          }
+
+          &:not(.group-row):first-child {
+
+            td {
+              border-top: 1px solid #dde2e6;
+
+              &.p-0 + td:nth-child(2) {
+                border-top-left-radius: 3px;
+              }
+
+              &:not(.p-0):first-child {
+                border-top-left-radius: 3px;
+              }
+
+              &:nth-last-child(2) {
+                border-top-right-radius: 3px;
+
+                &:after {
+                  content: none !important;
+                  display: none !important;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+
+    /*table {
+      border-spacing: 0 14px;
+
+      thead tr th:not(.p-0),
+      tbody tr td:not(.p-0) {
+        position: relative;
+        height: 20px;
+        padding-left: 20px;
+        padding-right: 20px;
+      }
+
+      tbody {
+
+        tr {
+
+          td {
+            padding: 3px 10px !important;
+          }
+
+          td:not(.p-0):nth-child(n+2):nth-last-child(n+2) {
+            background: #fff;
+            box-shadow: 0 6px 0 0 #fff, 0 -8px 0 0 #fff;
+          }
+
+          &:not(.group-row) td:not(.p-0):before {
+            content: "";
+            position: absolute;
+            top: -6px;
+            left: 0;
+            right: 0;
+            border-top: 1px solid #dee2e6;
+          }
+
+          &.group-row td:not(.p-0):nth-child(n+2):nth-last-child(n+2) {
+            height: 35px;
+            padding-top: 5px !important;
+            padding-bottom: 1px !important;
+            background: #fff;
+            box-shadow: 0 6px 0 0 #fff;
+            line-height: 30px;
+
+            &:nth-child(n):after {
+              content: "";
+              position: absolute;
+              top: -1px;
+              left: 0;
+              right: 0;
+              display: block;
+              height: 10px;
+              border-width: 1px 0 0;
+              border-style: solid;
+              border-color: #dee2e6;
+              background-color: #fff;
+            }
+          }
+
+          &:not(.group-row) {
+
+            td:nth-last-child(2) {
+              border-right: 0 none;
+            }
+          }
+
+          &.group-row {
+
+            td {
+
+              &:nth-child(2):after {
+                left: -1px;
+                border-width: 1px 0 0 1px;
+                border-top-left-radius: 3px;
+              }
+
+              &:nth-last-child(2):after {
+                right: -1px;
+                border-width: 1px 1px 0 0;
+                border-top-right-radius: 3px;
+              }
+
+              &:nth-child(2) {
+                border-left: 1px solid #dee2e6;
+              }
+
+              &:nth-last-child(2) {
+                border-right: 1px solid #dee2e6;
+              }
+            }
+          }
+
+          td:not(.p-0) {
+            overflow: visible;
+            border: 0 none;
+
+            &:nth-child(2):after {
+              content: "";
+              position: absolute;
+              top: -8px;
+              left: 0;
+              bottom: -6px;
+              display: block;
+              border-left: 1px solid #dee2e6;
+            }
+
+            &:nth-last-child(2):after {
+              content: "";
+              position: absolute;
+              top: -8px;
+              right: 0;
+              bottom: -6px;
+              display: block;
+              border-right: 1px solid #dee2e6;
+            }
+          }
+
+          &.group-row + tr td:not(.p-0):after {
+            top: -14px;
+          }
+
+          + tr.group-row {
+
+            td:not(.p-0):before {
+              content: "";
+              position: absolute;
+              top: -14px;
+              left: 0;
+              right: 0;
+              display: block;
+              height: 3px;
+              border-width: 0 0 1px;
+              border-style: solid;
+              border-color: #dee2e6;
+              background: #fff;
+              box-shadow: 0 3px 0 0 #f5f7fa;
+            }
+
+            td:not(.p-0):nth-child(2):before {
+              left: -1px;
+              border-width: 0 0 1px 1px;
+              border-bottom-left-radius: 3px;
+              box-shadow: -1px 3px 0 0 #f5f7fa, 0 3px 0 0 #f5f7fa;
+            }
+
+            td:not(.p-0):nth-last-child(2):before {
+              right: -1px;
+              border-width: 0 1px 1px 0;
+              border-bottom-right-radius: 3px;
+              box-shadow: 1px 3px 0 0 #f5f7fa, 0 3px 0 0 #f5f7fa;
+            }
+          }
+        }
+      }
+    }*/
+  }
+}
