#35113 Added hyperlinks to 'action' columns in data tables.

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -1965,7 +1965,7 @@ i.file {
       &.row-click {
         &:hover {
           td {
-            background-color: #eff9ff;
+            //background-color: #eff9ff;
           }
         }
       }
