--- a/styles/base.scss
+++ b/styles/base.scss
@@ -15,6 +15,12 @@ body {
   font-family: 'HelveticaNeueLTPro';
 }
 
+a:hover {
+  text-decoration: none !important;
+  font-weight: 700 !important;
+  color: #2599d5 !important;
+}
+
 .dashed-underline {
   text-decoration: underline;
   text-decoration-style: dashed;
@@ -46,7 +52,8 @@ a.ui.button {
 
   &:hover {
     background: transparent !important;
-    text-decoration: underline !important;
+    text-decoration: none !important;
+    font-weight: 700 !important;
     color: #2185d0 !important;
   }
 }
