--- a/styles/base.scss
+++ b/styles/base.scss
@@ -2410,17 +2410,24 @@ i.file {
       border-collapse: separate;
 
       thead {
+
         tr {
+
           th {
             height: 20px;
             border: 0 none;
             padding: 0 10px !important;
             background: #f8f9fb none;
-            box-shadow: 0 0 0 0 transparent !important;
+            box-shadow: 0 -3px 0 0 #f8f9fb, 0 3px 0 0 #f8f9fb !important;
             text-transform: uppercase;
             font-size: 12px;
             font-weight: 700;
             color: #848893;
+
+            &:nth-last-child(n+2) {
+              background: #f8f9fb none;
+              box-shadow: 0 -3px 0 0 #f8f9fb !important;
+            }
 
             &:after {
               content: none !important;
@@ -2473,18 +2480,30 @@ i.file {
       }
 
       tbody {
+
         tr {
+
           td {
             border-top: 1px solid #dde2e6;
             position: relative;
             overflow: visible;
             height: 20px;
-            padding: 14px 10px !important;
+            padding: 13px 10px !important;
             box-shadow: 0 6px 0 0 #f8f9fb;
             font-size: 14px;
             font-weight: 400;
             color: #20273a;
             line-height: 20px;
+
+            &:nth-child(n):not(.p-0) {
+              border-top: 1px solid #dde2e6;
+            }
+
+            &:nth-child(1):not(.p-0),
+            &.p-0:nth-child(1) + td {
+              border-top-left-radius: 3px;
+              border-bottom-left-radius: 3px;
+            }
 
             &.actions {
               padding-right: 0 !important;
@@ -2510,7 +2529,7 @@ i.file {
               box-shadow: 0 0 0 0 transparent;
             }
 
-            &:nth-child(2) {
+            /*&:nth-child(2) {
               position: relative;
               border-bottom-left-radius: 3px;
               padding-left: 20px !important;
@@ -2528,7 +2547,7 @@ i.file {
                 border-color: #dde2e6;
                 background: #fff;
               }
-            }
+            }*/
 
             &:nth-last-child(2) {
               position: relative;
@@ -2570,6 +2589,69 @@ i.file {
               &:after {
                 content: none !important;
                 display: none !important;
+              }
+            }
+
+            &.p-0 {
+              display: none !important;
+            }
+
+            &[class*="skeleton-cell"] {
+
+              &:nth-child(n) {
+                border-left: 0 none;
+                border-right: 0 none;
+              }
+
+              &:first-child {
+                border-left: 1px solid #dde2e6;
+                border-bottom-left-radius: 3px;
+              }
+
+              &:last-child {
+                border: 0 none !important;
+                background: #f8f9fb !important;
+              }
+
+              &:nth-last-child(2) {
+                border-right: 1px solid #dde2e6;
+                border-bottom-right-radius: 3px;
+              }
+            }
+          }
+
+          &.open {
+
+            td:first-child:not(.p-0),
+            td.p-0:first-child + td {
+              border-bottom-left-radius: 0;
+            }
+
+            td:nth-last-child(2) {
+              border-bottom-right-radius: 0;
+            }
+
+            + tr {
+
+              td:nth-child(n) {
+                border-top: 0 none;
+                border-radius: 3px;
+                border-top-left-radius: 0;
+                border-top-right-radius: 0;
+
+                &:before {
+                  content: "";
+                  position: absolute;
+                  top: -3px;
+                  left: -1px;
+                  right: -1px;
+                  display: block;
+                  height: 4px;
+                  border-width: 0 1px;
+                  border-style: solid;
+                  border-color: #dde2e6;
+                  background: #fff;
+                }
               }
             }
           }
