--- a/styles/base.scss
+++ b/styles/base.scss
@@ -2121,17 +2121,13 @@ i.file {
 
 .listings-wrapper,
 .marketplace-wrapper {
-
   .table-responsive {
-
     table.table {
       border-spacing: 0;
       border-collapse: separate;
 
       thead {
-
         tr {
-
           th {
             height: 20px;
             border: 0 none;
@@ -2161,13 +2157,12 @@ i.file {
             }
 
             .flex-row {
-
               > span {
                 display: flex;
                 flex-flow: row nowrap;
                 width: 100% !important;
 
-                > [class*="header-title"] {
+                > [class*='header-title'] {
                   flex-grow: 0;
                   flex-shrink: 1;
                   overflow: hidden;
@@ -2194,9 +2189,7 @@ i.file {
       }
 
       tbody {
-
         tr {
-
           td {
             position: relative;
             overflow: visible;
@@ -2220,7 +2213,7 @@ i.file {
             }
 
             &:not(.p-0):before {
-              content: "";
+              content: '';
               position: absolute;
               top: 100%;
               left: 0;
@@ -2238,7 +2231,7 @@ i.file {
               padding-left: 20px !important;
 
               &:after {
-                content: "";
+                content: '';
                 position: absolute;
                 left: -1px;
                 bottom: 100%;
@@ -2258,7 +2251,7 @@ i.file {
               padding-right: 20px !important;
 
               &:after {
-                content: "";
+                content: '';
                 position: absolute;
                 right: -1px;
                 bottom: 100%;
@@ -2272,7 +2265,7 @@ i.file {
               }
             }
 
-            span[class*="table-header-title"] {
+            span[class*='table-header-title'] {
               display: inline-block;
               width: calc(100% - 18px);
               vertical-align: top;
@@ -2280,7 +2273,6 @@ i.file {
           }
 
           &.group-row {
-
             td {
               position: relative;
               height: 30px;
@@ -2294,7 +2286,7 @@ i.file {
               line-height: 30px;
 
               &:not(.p-0):after {
-                content: "";
+                content: '';
                 position: absolute;
                 top: 6px;
                 left: 0;
@@ -2336,7 +2328,6 @@ i.file {
             }
 
             &:hover {
-
               td {
                 background: #eff9ff;
 
@@ -2346,7 +2337,6 @@ i.file {
               }
 
               + tr:not(.group-row) {
-
                 td:nth-child(2):after,
                 td:nth-last-child(2):after {
                   background: #eff9ff;
@@ -2356,7 +2346,6 @@ i.file {
           }
 
           &:not(.group-row):first-child {
-
             td {
               border-top: 1px solid #dde2e6;
 
@@ -2391,11 +2380,8 @@ i.file {
     overflow: visible;
 
     table.table {
-
       tbody {
-
         tr {
-
           td {
             position: relative;
             overflow: visible;
@@ -2414,16 +2400,13 @@ i.file {
 }
 
 .notifications-wrapper {
-
   .table-responsive {
     table.table {
       border-spacing: 0 2px;
       border-collapse: separate;
 
       thead {
-
         tr {
-
           th {
             height: 20px;
             border: 0 none;
@@ -2435,7 +2418,7 @@ i.file {
             font-weight: 700;
             color: #848893;
 
-            &:nth-last-child(n+2) {
+            &:nth-last-child(n + 2) {
               background: #f8f9fb none;
               box-shadow: 0 -3px 0 0 #f8f9fb !important;
             }
@@ -2458,13 +2441,12 @@ i.file {
             }
 
             .flex-row {
-
               > span {
                 display: flex;
                 flex-flow: row nowrap;
                 width: 100% !important;
 
-                > [class*="header-title"] {
+                > [class*='header-title'] {
                   flex-grow: 0;
                   flex-shrink: 1;
                   overflow: hidden;
@@ -2491,9 +2473,7 @@ i.file {
       }
 
       tbody {
-
         tr {
-
           td {
             position: relative;
             overflow: visible;
@@ -2530,7 +2510,7 @@ i.file {
             }
 
             &:not(.p-0):before {
-              content: "";
+              content: '';
               position: absolute;
               top: 100%;
               left: 0;
@@ -2569,7 +2549,7 @@ i.file {
               padding-right: 20px !important;
 
               &:after {
-                content: "";
+                content: '';
                 position: absolute;
                 right: -1px;
                 bottom: 100%;
@@ -2583,7 +2563,7 @@ i.file {
               }
             }
 
-            span[class*="table-header-title"] {
+            span[class*='table-header-title'] {
               display: inline-block;
               width: calc(100% - 18px);
               vertical-align: top;
@@ -2610,8 +2590,7 @@ i.file {
               display: none !important;
             }
 
-            &[class*="skeleton-cell"] {
-
+            &[class*='skeleton-cell'] {
               &:nth-child(n) {
                 border-left: 0 none;
                 border-right: 0 none;
@@ -2635,7 +2614,6 @@ i.file {
           }
 
           &.open {
-
             td:first-child:not(.p-0),
             td.p-0:first-child + td {
               border-bottom-left-radius: 0;
@@ -2646,7 +2624,6 @@ i.file {
             }
 
             + tr {
-
               td:nth-child(n) {
                 border-top: 0 none;
                 border-radius: 3px;
@@ -2655,7 +2632,7 @@ i.file {
                 white-space: normal !important;
 
                 &:before {
-                  content: "";
+                  content: '';
                   position: absolute;
                   top: -3px;
                   left: -1px;
@@ -2676,9 +2653,279 @@ i.file {
           }
 
           &.selected {
-
             td {
+              &:nth-child(n) {
+                border-color: #2599d5;
+                background-color: #e8f7ff;
+              }
 
+              &:first-child {
+                border-left-width: 4px;
+                padding-left: 7px !important;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.orders-wrapper {
+  .table-responsive {
+    table.table {
+      border-spacing: 0 2px;
+      border-collapse: separate;
+
+      thead {
+        tr {
+          th {
+            height: 20px;
+            border: 0 none;
+            padding: 0 10px !important;
+            background: #f8f9fb none;
+            box-shadow: 0 -3px 0 0 #f8f9fb, 0 3px 0 0 #f8f9fb !important;
+            text-transform: uppercase;
+            font-size: 12px;
+            font-weight: 700;
+            color: #848893;
+
+            &:nth-last-child(n + 2) {
+              background: #f8f9fb none;
+              box-shadow: 0 -3px 0 0 #f8f9fb !important;
+            }
+
+            &:after {
+              content: none !important;
+              display: none !important;
+            }
+
+            &:nth-child(2) {
+              padding-left: 0 !important;
+            }
+
+            &:nth-last-child(2) {
+              border: 0 none !important;
+
+              .flex-row.justify-content-end {
+                padding-right: 10px !important;
+              }
+            }
+
+            .flex-row {
+              > span {
+                display: flex;
+                flex-flow: row nowrap;
+                width: 100% !important;
+
+                > [class*='header-title'] {
+                  flex-grow: 0;
+                  flex-shrink: 1;
+                  overflow: hidden;
+                  text-overflow: ellipsis;
+                }
+
+                > i {
+                  flex-grow: 0;
+                  flex-shrink: 0;
+                  margin-right: 0;
+                }
+              }
+
+              &.justify-content-end > span {
+                justify-content: flex-end;
+              }
+
+              &.justify-content-center > span {
+                justify-content: center;
+              }
+            }
+          }
+        }
+      }
+
+      tbody {
+        tr {
+          td {
+            position: relative;
+            overflow: visible;
+            height: 20px;
+            border-top: 1px solid #dde2e6;
+            border-right: 0 none;
+            padding: 13px 10px !important;
+            box-shadow: 0 6px 0 0 #f8f9fb;
+            font-size: 14px;
+            font-weight: 400;
+            color: #20273a;
+            line-height: 20px;
+
+            &:nth-child(n):not(.p-0) {
+              border-top: 1px solid #dde2e6;
+            }
+
+            &:nth-child(1):not(.p-0),
+            &.p-0:nth-child(1) + td {
+              border-left: 1px solid #dde2e6;
+              border-top-left-radius: 3px;
+              border-bottom-left-radius: 3px;
+            }
+
+            &.actions {
+              padding-right: 0 !important;
+            }
+
+            .cell-wrapper {
+              overflow: hidden;
+              display: block;
+              width: 100%;
+              text-overflow: ellipsis;
+            }
+
+            &:not(.p-0):before {
+              content: '';
+              position: absolute;
+              top: 100%;
+              left: 0;
+              right: 0;
+              display: block;
+              height: 6px;
+              margin-top: 1px;
+              background: #f8f9fb;
+              box-shadow: 0 0 0 0 transparent;
+            }
+
+            /*&:nth-child(2) {
+              position: relative;
+              border-bottom-left-radius: 3px;
+              padding-left: 20px !important;
+
+              &:after {
+                content: "";
+                position: absolute;
+                left: -1px;
+                bottom: 100%;
+                display: block;
+                width: 3px;
+                height: 3px;
+                border-width: 0 0 1px 1px;
+                border-style: solid;
+                border-color: #dde2e6;
+                background: #fff;
+              }
+            }*/
+
+            &:nth-last-child(2) {
+              position: relative;
+              border-right: 1px solid #dde2e6;
+              border-bottom-right-radius: 3px;
+              padding-right: 20px !important;
+
+              &:after {
+                content: '';
+                position: absolute;
+                right: -1px;
+                bottom: 100%;
+                display: block;
+                width: 3px;
+                height: 3px;
+                border-width: 0 1px 1px 0;
+                border-style: solid;
+                border-color: #dde2e6;
+                background: #fff;
+              }
+            }
+
+            span[class*='table-header-title'] {
+              display: inline-block;
+              width: calc(100% - 18px);
+              vertical-align: top;
+            }
+
+            &.p-0 + td:nth-child(2) {
+              border-top-left-radius: 3px;
+            }
+
+            &:not(.p-0):first-child {
+              border-top-left-radius: 3px;
+            }
+
+            &:nth-last-child(2) {
+              border-top-right-radius: 3px;
+
+              &:after {
+                content: none !important;
+                display: none !important;
+              }
+            }
+
+            &.p-0 {
+              display: none !important;
+            }
+
+            &[class*='skeleton-cell'] {
+              &:nth-child(n) {
+                border-left: 0 none;
+                border-right: 0 none;
+              }
+
+              &:first-child {
+                border-left: 1px solid #dde2e6;
+                border-bottom-left-radius: 3px;
+              }
+
+              &:last-child {
+                border: 0 none !important;
+                background: #f8f9fb !important;
+              }
+
+              &:nth-last-child(2) {
+                border-right: 1px solid #dde2e6;
+                border-bottom-right-radius: 3px;
+              }
+            }
+          }
+
+          &.open {
+            td:first-child:not(.p-0),
+            td.p-0:first-child + td {
+              border-bottom-left-radius: 0;
+            }
+
+            td:nth-last-child(2) {
+              border-bottom-right-radius: 0;
+            }
+
+            + tr {
+              td:nth-child(n) {
+                border-top: 0 none;
+                border-radius: 3px;
+                border-top-left-radius: 0;
+                border-top-right-radius: 0;
+                white-space: normal !important;
+
+                &:before {
+                  content: '';
+                  position: absolute;
+                  top: -3px;
+                  left: -1px;
+                  right: -1px;
+                  display: block;
+                  height: 4px;
+                  border-width: 0 1px;
+                  border-style: solid;
+                  border-color: #dde2e6;
+                  background: #fff;
+                }
+              }
+
+              td:last-child {
+                border-right: 1px solid #dde2e6;
+              }
+            }
+          }
+
+          &.selected {
+            td {
               &:nth-child(n) {
                 border-color: #2599d5;
                 background-color: #e8f7ff;
