--- a/styles/base.scss
+++ b/styles/base.scss
@@ -2105,10 +2105,15 @@ i.file {
   }
 }
 
-.price-input input[type='number']::-webkit-inner-spin-button,
-.price-input input[type='number']::-webkit-outer-spin-button {
+// Chrome, Safari, Edge, Opera
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+// Firefox
+input[type=number] {
+  -moz-appearance: textfield;
 }
 
 .visible.menu.transition {
