--- a/styles/base.scss
+++ b/styles/base.scss
@@ -2121,17 +2121,13 @@ i.file {
 
 .listings-wrapper,
 .marketplace-wrapper {
-
   .table-responsive {
-
     table.table {
       border-spacing: 0;
       border-collapse: separate;
 
       thead {
-
         tr {
-
           th {
             height: 20px;
             border: 0 none;
@@ -2161,13 +2157,12 @@ i.file {
             }
 
             .flex-row {
-
               > span {
                 display: flex;
                 flex-flow: row nowrap;
                 width: 100% !important;
 
-                > [class*="header-title"] {
+                > [class*='header-title'] {
                   flex-grow: 0;
                   flex-shrink: 1;
                   overflow: hidden;
@@ -2194,9 +2189,7 @@ i.file {
       }
 
       tbody {
-
         tr {
-
           td {
             position: relative;
             overflow: visible;
@@ -2220,7 +2213,7 @@ i.file {
             }
 
             &:not(.p-0):before {
-              content: "";
+              content: '';
               position: absolute;
               top: 100%;
               left: 0;
@@ -2238,7 +2231,7 @@ i.file {
               padding-left: 20px !important;
 
               &:after {
-                content: "";
+                content: '';
                 position: absolute;
                 left: -1px;
                 bottom: 100%;
@@ -2258,7 +2251,7 @@ i.file {
               padding-right: 20px !important;
 
               &:after {
-                content: "";
+                content: '';
                 position: absolute;
                 right: -1px;
                 bottom: 100%;
@@ -2272,7 +2265,7 @@ i.file {
               }
             }
 
-            span[class*="table-header-title"] {
+            span[class*='table-header-title'] {
               display: inline-block;
               width: calc(100% - 18px);
               vertical-align: top;
@@ -2280,7 +2273,6 @@ i.file {
           }
 
           &.group-row {
-
             td {
               position: relative;
               height: 30px;
@@ -2294,7 +2286,7 @@ i.file {
               line-height: 30px;
 
               &:not(.p-0):after {
-                content: "";
+                content: '';
                 position: absolute;
                 top: 6px;
                 left: 0;
@@ -2336,7 +2328,6 @@ i.file {
             }
 
             &:hover {
-
               td {
                 background: #eff9ff;
 
@@ -2346,7 +2337,6 @@ i.file {
               }
 
               + tr:not(.group-row) {
-
                 td:nth-child(2):after,
                 td:nth-last-child(2):after {
                   background: #eff9ff;
@@ -2356,7 +2346,6 @@ i.file {
           }
 
           &:not(.group-row):first-child {
-
             td {
               border-top: 1px solid #dde2e6;
 
@@ -2391,11 +2380,8 @@ i.file {
     overflow: visible;
 
     table.table {
-
       tbody {
-
         tr {
-
           td {
             position: relative;
             overflow: visible;
@@ -2413,17 +2399,14 @@ i.file {
   }
 }
 
-.notifications-wrapper {
-
+.table-detail-rows-wrapper {
   .table-responsive {
     table.table {
       border-spacing: 0 2px;
       border-collapse: separate;
 
       thead {
-
         tr {
-
           th {
             height: 20px;
             border: 0 none;
@@ -2435,7 +2418,7 @@ i.file {
             font-weight: 700;
             color: #848893;
 
-            &:nth-last-child(n+2) {
+            &:nth-last-child(n + 2) {
               background: #f8f9fb none;
               box-shadow: 0 -3px 0 0 #f8f9fb !important;
             }
@@ -2458,13 +2441,12 @@ i.file {
             }
 
             .flex-row {
-
               > span {
                 display: flex;
                 flex-flow: row nowrap;
                 width: 100% !important;
 
-                > [class*="header-title"] {
+                > [class*='header-title'] {
                   flex-grow: 0;
                   flex-shrink: 1;
                   overflow: hidden;
@@ -2491,9 +2473,7 @@ i.file {
       }
 
       tbody {
-
         tr {
-
           td {
             position: relative;
             overflow: visible;
@@ -2530,7 +2510,7 @@ i.file {
             }
 
             &:not(.p-0):before {
-              content: "";
+              content: '';
               position: absolute;
               top: 100%;
               left: 0;
@@ -2569,7 +2549,7 @@ i.file {
               padding-right: 20px !important;
 
               &:after {
-                content: "";
+                content: '';
                 position: absolute;
                 right: -1px;
                 bottom: 100%;
@@ -2583,7 +2563,7 @@ i.file {
               }
             }
 
-            span[class*="table-header-title"] {
+            span[class*='table-header-title'] {
               display: inline-block;
               width: calc(100% - 18px);
               vertical-align: top;
@@ -2610,8 +2590,7 @@ i.file {
               display: none !important;
             }
 
-            &[class*="skeleton-cell"] {
-
+            &[class*='skeleton-cell'] {
               &:nth-child(n) {
                 border-left: 0 none;
                 border-right: 0 none;
@@ -2635,7 +2614,6 @@ i.file {
           }
 
           &.open {
-
             td:first-child:not(.p-0),
             td.p-0:first-child + td {
               border-bottom-left-radius: 0;
@@ -2646,7 +2624,6 @@ i.file {
             }
 
             + tr {
-
               td:nth-child(n) {
                 border-top: 0 none;
                 border-radius: 3px;
@@ -2655,7 +2632,7 @@ i.file {
                 white-space: normal !important;
 
                 &:before {
-                  content: "";
+                  content: '';
                   position: absolute;
                   top: -3px;
                   left: -1px;
@@ -2676,9 +2653,7 @@ i.file {
           }
 
           &.selected {
-
             td {
-
               &:nth-child(n) {
                 border-color: #2599d5;
                 background-color: #e8f7ff;
