#35531 Created global component to display formatted datagrid name (with actions, icons) - ActionCell, used in datagrid.

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -2224,7 +2224,7 @@ input[type='number'] {
 
             .cell-wrapper {
               overflow: hidden;
-              display: block;
+              //display: block;
               width: 100%;
               text-overflow: ellipsis;
             }
@@ -2521,7 +2521,7 @@ input[type='number'] {
 
             .cell-wrapper {
               overflow: hidden;
-              display: block;
+              //display: block;
               width: 100%;
               text-overflow: ellipsis;
             }
